# backend/app/Http/Controllers/AuthController.php
@@ -11,6 +11,28 @@ use Illuminate\Support\Facades\Auth;
 
 class AuthController extends Controller
 {
+    /**
+     * @OA\Post(
+     *      path="/login",
+     *      operationId="Login",
+     *      tags={"Auth"},
+     *      summary="Login",
+     *      description="Returns token",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/UpdateUserRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/UpdateUserRequest")
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     * )
+     */
     public function login(LoginRequest $request)
     {
         $credentials = $request->validated();
@@ -23,6 +45,28 @@ class AuthController extends Controller
         return response()->noContent(401);
     }
 
+    /**
+     * @OA\Put(
+     *      path="/register",
+     *      operationId="Create new User",
+     *      tags={"Auth"},
+     *      summary="Create user",
+     *      description="Returns created user, some fields shold be unique",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/CreateUserRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/CreateUserResponse")
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     * )
+     */
     public function register(RegisterRequest $request)
     {
         $user = User::create($request->validated());
