# backend/app/Http/Controllers/Controller.php
@@ -12,26 +12,29 @@ class Controller extends BaseController
     /**
      * @OA\Info(
      *      version="1.0.0",
-     *      title="Laravel OpenApi Demo Documentation",
+     *      title="GoToDive OpenApi Documentation",
      *      description="L5 Swagger OpenApi description",
      *      @OA\Contact(
-     *          email="admin@admin.com"
+     *          email="test@test.com"
      *      ),
-     *      @OA\License(
-     *          name="Apache 2.0",
-     *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
-     *      )
      * )
      *
      * @OA\Server(
      *      url=L5_SWAGGER_CONST_HOST,
-     *      description="Demo API Server"
+     *      description="API Server"
      * )
-
      *
      * @OA\Tag(
-     *     name="Projects",
-     *     description="API Endpoints of Projects"
+     *     name="Auth",
+     *     description="API Endpoints of Auth"
+     * )
+     * @OA\Tag(
+     *     name="Service Categories",
+     *     description="API Endpoints of Categories"
+     * )
+     * @OA\Tag(
+     *     name="Services",
+     *     description="API Endpoints of Services"
      * )
      */
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
