# backend/storage/api-docs/api-docs.json
@@ -1,75 +1,221 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Laravel OpenApi Demo Documentation",
+        "title": "GoToDive OpenApi Documentation",
         "description": "L5 Swagger OpenApi description",
         "contact": {
-            "email": "admin@admin.com"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+            "email": "test@test.com"
         },
         "version": "1.0.0"
     },
     "servers": [
         {
             "url": "http://localhost:8000",
-            "description": "Demo API Server"
+            "description": "API Server"
         }
     ],
     "paths": {
-        "/projects": {
+        "/users": {
             "get": {
                 "tags": [
-                    "Projects"
+                    "Auth"
                 ],
                 "summary": "Get list of projects",
                 "description": "Returns list of projects",
-                "operationId": "getProjectsList",
+                "operationId": "showUser",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/GetUserRequest"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
-                        "description": "Successful operation"
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GetUserResponse"
+                                }
+                            }
+                        }
                     },
                     "401": {
                         "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
                     }
                 }
-            },
+            }
+        },
+        "/projects": {
             "post": {
                 "tags": [
-                    "Projects"
+                    "Auth"
                 ],
                 "summary": "Store new project",
                 "description": "Returns project data",
                 "operationId": "storeProject",
                 "requestBody": {
-                    "required": true
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UpdateUserRequest"
+                            }
+                        }
+                    }
                 },
                 "responses": {
-                    "201": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UpdateUserRequest"
+                                }
+                            }
+                        }
                     },
                     "401": {
                         "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
                     }
+                }
+            }
+        }
+    },
+    "components": {
+        "schemas": {
+            "GetUserRequest": {
+                "title": "Get User request",
+                "description": "User model",
+                "properties": {
+                    "token": {
+                        "title": "Token",
+                        "description": "Users Token",
+                        "type": "string",
+                        "example": "6fLEwUHhb8HXBVWD07NQtcioHznVOlv700isztFJ"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "User"
+                }
+            },
+            "GetUserResponse": {
+                "title": "Get User response",
+                "description": "User model",
+                "properties": {
+                    "id": {
+                        "title": "ID",
+                        "description": "ID",
+                        "type": "integer",
+                        "format": "int64",
+                        "example": 1
+                    },
+                    "name": {
+                        "title": "Name",
+                        "description": "Name of the User",
+                        "type": "string",
+                        "example": "Patric Uren"
+                    },
+                    "email": {
+                        "title": "Email",
+                        "description": "User Email",
+                        "type": "string",
+                        "example": "example@example.com"
+                    },
+                    "isAdmin": {
+                        "title": "Is Admin",
+                        "description": "Define if user has admin rights",
+                        "type": "string",
+                        "example": "0/1"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "User"
+                }
+            },
+            "UpdateUserRequest": {
+                "title": "Get User request",
+                "description": "User model",
+                "properties": {
+                    "token": {
+                        "title": "Token",
+                        "description": "Users Token",
+                        "type": "string",
+                        "example": "6fLEwUHhb8HXBVWD07NQtcioHznVOlv700isztFJ"
+                    },
+                    "name": {
+                        "title": "Name",
+                        "description": "Name of the User",
+                        "type": "string",
+                        "example": "Patric Uren"
+                    },
+                    "email": {
+                        "title": "Email",
+                        "description": "User Email",
+                        "type": "string",
+                        "example": "example@example.com"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "User"
+                }
+            },
+            "UpdateUserResponse": {
+                "title": "Get User response",
+                "description": "User model",
+                "properties": {
+                    "id": {
+                        "title": "ID",
+                        "description": "ID",
+                        "type": "integer",
+                        "format": "int64",
+                        "example": 1
+                    },
+                    "name": {
+                        "title": "Name",
+                        "description": "Name of the User",
+                        "type": "string",
+                        "example": "Patric Uren"
+                    },
+                    "email": {
+                        "title": "Email",
+                        "description": "User Email",
+                        "type": "string",
+                        "example": "example@example.com"
+                    },
+                    "isAdmin": {
+                        "title": "Is Admin",
+                        "description": "Define if user has admin rights",
+                        "type": "string",
+                        "example": "0/1"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "User"
                 }
             }
         }
     },
     "tags": [
         {
-            "name": "Projects",
-            "description": "API Endpoints of Projects"
+            "name": "Auth",
+            "description": "API Endpoints of Auth"
+        },
+        {
+            "name": "Service Categories",
+            "description": "API Endpoints of Categories"
+        },
+        {
+            "name": "Services",
+            "description": "API Endpoints of Services"
         }
     ],
     "security": [
